# superdate

./: .gitignore  CHANGELOG.rst  README.rst  pyproject.toml
superdate/: SuperDate.py  __init__.py  parse_date.py
tests/: test_super_date.py
